<resources>
    <string name="app_name">Sensor Recorder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Sensor Recorder</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="not_recording">Press the button to start recording</string>
    <string name="recording">Recording sensor data now</string>
    <string name="recording_button">start/stop recording</string>
    <string name="uploading">Uploading data on server</string>
    <string name="uploading_success">Data uploaded successfully</string>
    <string name="uploading_fail">Upload failed</string>
    <string name="name_input">Insert your name</string>
    <string name="number_input">Insert number of steps</string>
    <string name="walk_type_input">Select walk type</string>
    <string name="username">username</string>
    <string name="step_number">step number</string>
    <string-array name="camminate_array">
        <item>Normal</item>
        <item>In Salita</item>
        <item>In Discesa</item>
        <item>Passi Irregolari</item>
        <item>Passi Stretti</item>
        <item>Corsa</item>
    </string-array>
</resources>