<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_recording"
        app:layout_constraintBottom_toTopOf="@id/name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_first"
        app:layout_constraintBottom_toTopOf="@+id/steps_layout"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_input"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/tester_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:hint="@string/username"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/steps_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name_layout"
        app:layout_constraintBottom_toTopOf="@+id/spinner_layout"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_input"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/steps_number"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="number"
            android:hint="@string/step_number"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/steps_layout"
        app:layout_constraintBottom_toTopOf="@+id/button_first"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_type_input"
            android:layout_marginTop="30dp"/>
        <Spinner
            android:id="@+id/camminate_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>